--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%= htmlWebpackPlugin.options.title %></title><meta property="og:url" content="https://bestian.github.io/cell/"/>
+    <meta property="og:locale" content="zh-Tw" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="細胞自動機" />
+    <meta property="og:description" content="一個細胞自動機的動態摹擬程式"/>
+    <meta property="og:image" content="https://bestian.github.io/cell/img/icons/apple-touch-icon.png" />
   </head>
   <body>
     <noscript>
