--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="細胞自動機" />
     <meta property="og:description" content="一個細胞自動機的動態摹擬程式"/>
-    <meta property="og:image" content="https://bestian.github.io/cell/img/icons/apple-touch-icon.png" />
+    <meta property="og:image" content="https://bestian.github.io/cell/img/icons/logo.png" />
   </head>
   <body>
     <noscript>
